report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the
C<LISTEN_PORT> or C<SSL_PORT> F<bricolage.conf> directives were anything other
than 80 and 443, respectively. Thanks to Héctor Daniel Cortés González for the
report. [David]

=item *

Fixed a bug where the SFTP mover would not properly finish moving the file,
leaving escaped tmp files on the destination server. [Matt Rolf]

=item *

Updating published stories or media or deployed templates via the SOAP
interface with the C<EXPIRE_ON_DEACTIVATE> F<bricolage.conf> directive enabled
no longer expires those assets unless they are active and the
C<< <expire_date> >> element is set in the XML. Thanks to Nick Legg for the
report (Bug # 184). [David]

=item *

Worked around a bug in L<Net::SSH2> where sockets weren't being closed,
leading to L<bric_queued> running out of file descriptors. [David]

=back

=head1 Version 2.0.0 (2010-04-12)

=head2 Bug Fixes

=over

=item *

Fixed error handling in the access handler so that it works when a URI is a
directory. Thanks to Dave Rolsky for the initial patch. [David]

=item *

Updated session error handling to recognize a different error message in
recent versions of Apache::Session. [Dave Rolsky]

=item *

The buttons once again work in the category browser when the
C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true. Thanks to
Krzysztof Rudnik for the report (Bug #155). [David]

=item *

Fixed subtle category autocomplete issue where it can be difficult to choose